--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <H1>Avinash Saripalli</H1>
-    <img src="../assets/Photo_2022-03-07_184422.jpg" alt="My image" height="200" >
+    <img src="./Photo_2022-03-07_184422.jpg" alt="My image" height="200" >
     <p>I am a beginner in web developping. Like to do things in my way.</p> 
     <hr>
     <h2>Education</h2>
